# owa-micro-workflows/config/swagger.json
@@ -126,7 +126,65 @@
     },
     "/api/v1/workflow/list": {
       "post": {
-        "description": "",
+        "tags": [
+          "Workflow"
+        ],
+        "summary": "List of workflow",
+        "description": "Endpoint to list workflow",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "description": "Token for authentication",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "page_size": {
+                    "example": "any"
+                  },
+                  "current_page": {
+                    "example": "any"
+                  },
+                  "search_query": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Workflow"
+        ],
+        "summary": "GET List of workflow",
+        "description": "Endpoint to get list workflow",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "description": "Token for authentication",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "default": {
             "description": ""
@@ -136,12 +194,25 @@
     },
     "/api/v1/workflow/id/{workflowId}": {
       "get": {
-        "description": "",
+        "tags": [
+          "Workflow"
+        ],
+        "summary": "Get By Workflow Id",
+        "description": "Endpoint to health check Workflow Service",
         "parameters": [
           {
             "name": "workflowId",
             "in": "path",
             "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "description": "Token for authentication",
             "schema": {
               "type": "string"
             }
@@ -156,10 +227,150 @@
     },
     "/api/v1/workflow/nodesList": {
       "get": {
-        "description": "",
+        "tags": [
+          "Workflow"
+        ],
+        "summary": "List of nodes",
+        "description": "Endpoint to list nodes",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "description": "Token for authentication",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "default": {
             "description": ""
+          }
+        }
+      }
+    },
+    "/api/v1/workflow/changeStatus/{workflowId}": {
+      "post": {
+        "tags": [
+          "Workflow"
+        ],
+        "summary": "Change Status of workflow",
+        "description": "Endpoint to change status of workflow",
+        "parameters": [
+          {
+            "name": "workflowId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "description": "Token for authentication",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/v1/workflow/taskList/{workflowId}": {
+      "get": {
+        "tags": [
+          "Workflow"
+        ],
+        "summary": "Get Task List",
+        "description": "Endpoint to get task list",
+        "parameters": [
+          {
+            "name": "workflowId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "description": "Token for authentication",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/v1/workflow/assignment/create": {
+      "post": {
+        "tags": [
+          "Workflow Assignment"
+        ],
+        "summary": "Create/Update workflow",
+        "description": "Endpoint to create workflow",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "description": "Token for authentication",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "body",
+            "workflow_id": 71,
+            "task_assignments": [
+              {
+                "task_id": 2,
+                "assigned_to": 1,
+                "assigned_on": "2023-07-17"
+              },
+              {
+                "task_id": 3,
+                "assigned_to": 1,
+                "assigned_on": "2023-07-17"
+              }
+            ],
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "task_assignments": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
