# owa-micro-workflows/startup/routes.ts
@@ -2,6 +2,7 @@ import express, {  Request, Response, Express, NextFunction } from 'express';
 import bodyParser from 'body-parser';
 import * as CONSTANT from '../constants/CONST';
 import {workflowRouter} from '../routes/workflow';
+import {workflowAssignmentRouter} from '../routes/workflowAssignment';
 
 export default function (app: Express): void {
   app.use(express.json());
@@ -30,4 +31,5 @@ export default function (app: Express): void {
   app.use(bodyParser.json());
   app.use(bodyParser.urlencoded({ extended: false }));
   app.use('/api/v1/workflow', workflowRouter);
+  app.use('/api/v1/workflow/assignment', workflowAssignmentRouter);
 }
